--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="name" pattern="(https?:\/\/)(w{3}\.)?([\w-]{1,}(\.[a-z]{2,6})|(\d{1,3}\.\d{1,3}\.\d{1,3}.\d{1,3}))((:\d{1,5})?)(\/)(([\w\d\/\-_]){1,})(#)?" placeholder="Ваш сайт" />
+                        <input class="form__input" type="url" name="name" pattern="(https?:\/\/)(w{3}\.)?([\w-]{1,}(\.[a-z]{2,6})|(\d{1,3}\.\d{1,3}\.\d{1,3}.\d{1,3}))((:\d{1,5})?)(\/?)(([\w\d\/\-_]){1,})?(#)?" placeholder="Ваш сайт" />
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
