--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ][а-яё]{1,19}|^[А-ЯЁ][а-яё]{1,19}[-][А-ЯЁ]{1}[а-яё]{1,}" placeholder="Имя" minlength="2" maxlength="20" required />
+                        <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ][а-яё]{1,19}|^[А-ЯЁ][а-яё]{1,19}[-]{1}[А-ЯЁ]{1}[а-яё]{1,}" placeholder="Имя" minlength="2" maxlength="20" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="name" pattern="([A-Za-z0-9_-]){1,}(@)([A-Za-z0-9_-]){1,}(\.)([A-Za-z]){2,6}" placeholder="E-Mail" />
+                        <input class="form__input" type="email" name="name" pattern="^([A-Za-z|\d]){2,}(([\._-]{1}[A-Za-z|\d]+)?)+@([A-Za-z|\d]){2,}(([\.-]{1}[A-Za-z|\d]+)?)+(\.[a-z]{2,6})$" placeholder="E-Mail" />
                         <span class="form__error">e-mail в формате: sega@yandex.ru</span>
                     </div>
                     <div class="form__field">
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="name" pattern="(https?:\/\/)(w{3}\.)?([\w-]{1,}(\.[a-z]{2,6})|(\d{1,3}\.\d{1,3}\.\d{1,3}.\d{1,3}))((:\d{1,5})?)(\/?)(([\w\d\/\-_]){1,})?(#)?" placeholder="Ваш сайт" />
+                        <input class="form__input" type="url" name="name" pattern="(https?:\/\/)(w{3}\.)?(([\w\d]{2,}(([\.-]{1}[A-Za-z|\d]+)?)+([\.][a-z]{2,6}(:\d{1,5})?))|(\d{1,3}\.\d{1,3}\.\d{1,3}.\d{1,3})(:\d{1,5})?)((\/([A-Za-z\d_-]+)?)+?)?(#)?" placeholder="Ваш сайт" />
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
