--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                         <span class="form__error">e-mail в формате: sega@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="name" placeholder="Телефон" pattern="([0-9]{11})|(\+[7][0-9]{10})|((\+[7](\s|\())\d{3}(-|\)(\s){0,1})\d{3}-\d{2}-\d{2})" minlength="" maxlength="" />
+                        <input class="form__input" type="tel" name="name" placeholder="Телефон" pattern="(^[0-9]{11}$)|(^\+[7][0-9]{10}$)|((^\+[7](\s|\())\d{3}(-|\)(\s){0,1})\d{3}-\d{2}-\d{2}$)" minlength="" maxlength="" />
                         <span class="form__error">телефон в формате: +7 (123) 456-78-90</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="name" pattern="(https?:\/\/)(w{3}\.)?(([\w\d]{2,}(([\.-]{1}[A-Za-z|\d]+)?)+([\.][a-z]{2,6}(:\d{1,5})?))|(\d{1,3}\.\d{1,3}\.\d{1,3}.\d{1,3})(:\d{1,5})?)((\/([A-Za-z\d_-]+)?)+?)?(#)?" placeholder="Ваш сайт" />
+                        <input class="form__input" type="url" name="name" pattern="^(https?:\/\/)(w{3}\.)?(([\w\d]{2,}(([\.-]{1}[A-Za-z|\d]+)?)+([\.][a-z]{2,6}(:\d{1,5})?))|(\d{1,3}\.\d{1,3}\.\d{1,3}.\d{1,3})(:\d{1,5})?)((\/([A-Za-z\d_-]+)?)+?)?(#)?" placeholder="Ваш сайт" />
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>
